--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.5",
+    "@mui/icons-material": "^5.14.6",
+    "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.8.1",
     "react": "^18.2.0",
@@ -34,10 +35,12 @@
     "@types/react-dom": "^18.0.6",
     "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.0.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "jsdom": "^21.1.0",
+    "postcss": "^8.4.28",
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2",
     "tailwindcss": "^3.3.3",
