--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.14.6",
     "@mui/styled-engine-sc": "^5.12.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.1",
@@ -43,10 +44,14 @@
     "postcss": "^8.4.28",
     "prettier": "^2.7.1",
     "prettier-config-nick": "^1.0.2",
+   
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
     "vite": "^4.0.0",
     "vitest": "^0.30.1"
+  },
+  "overrides": {
+    "react-error-overlay": "^6.0.9"
   },
   "eslintConfig": {
     "extends": [
